--- a/.codacy.yaml
+++ b/.codacy.yaml
@@ -13,6 +13,7 @@ tools:
         - specs/
       exclude_paths:
         - admin/
+        - .github/
 
   stylelint:
     patterns:
@@ -21,6 +22,7 @@ tools:
         - specs/
       exclude_paths:
         - admin/
+        - .github/
 
 coverage:
   enabled: false
