--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -18,3 +18,20 @@ jobs:
         uses: codacy/codacy-analysis-cli-action@97bf5df3c09e75f5bcd72695998f96ebd701846e
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          
+  upload-coverage:
+    runs-on: ubuntu-latest
+    needs: codacy-analysis
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Run Tests and Generate Coverage
+        run: npm run test
+
+      - name: Upload coverage to Codacy
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: coverage/lcov.info
