--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "cse110-sp25-group17",
   "version": "1.0.0",
+  "type": "module",
   "description": "[Team Page](https://cse110-sp25-group17.github.io/cse110-sp25-group17/admin/team.html)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "lint": "eslint .",
     "lint:css": "stylelint '**/*.{css,scss}'"
   },
@@ -23,6 +24,8 @@
     "@eslint/js": "^9.26.0",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "stylelint": "^16.19.1",
     "stylelint-config-standard": "^38.0.0"
   }
