--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@97bf5df3c09e75f5bcd72695998f96ebd701846e
         with:
@@ -26,6 +29,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests (and generate coverage)
         run: npm run test
