--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "globals": "^16.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^26.1.0",
     "stylelint": "^16.19.1",
     "stylelint-config-standard": "^38.0.0"
   }
